# hello-world-glib

./: hello-world.c  hello-world.h  hello.c  meson.build
doc/: hello-world.xml  meson.build
examples/: hello.py  meson.build
src/: hello-world.c  hello-world.h  meson.build
